<resources>
    <string name="app_name">PageViewer</string>

    <!-- Navigation description -->
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>

    <!-- Comments header -->
    <string name="comments_more">댓글 보이기</string>
    <string name="comments_less">댓글 감추기</string>
    <string name="comments_default">[0]</string>

    <!-- Loading -->
    <string name="loading">데이터를 불러오는 중입니다.</string>

    <!-- Text divider -->
    <string name="divider">|</string>

    <!-- Menu items -->
    <string name="board_notice">공지사항</string>
    <string name="board_dding">띵언게시판</string>
    <string name="board_womstory">웜역사관</string>
    <string name="board_project">프로젝트</string>

    <string name="board_latest">최신글</string>
    <string name="board_freeboard">자유게시판</string>
    <string name="board_womsplain">웜스플레인</string>
    <string name="board_hospital">재활병원</string>
    <string name="board_website">사이트건의</string>
    <string name="board_deathnote">데스노트</string>
    <string name="board_mapo">마포대교밑</string>

    <string name="best_wonyum">워념글</string>
    <string name="best_dailybest">일간베스트</string>
    <string name="best_weeklybest">주간베스트</string>
    <string name="best_monthlybest">월간베스트</string>

    <string name="board_global">Global</string>


</resources>
